# dn

./: .gitignore  CMakeLists.txt
cmake/: FindEnableCXX11.cmake
include/compute/: compute.hpp  graph.hpp  variable.hpp  weights.hpp
include/layer/: base.hpp  clamp.hpp  convolution.hpp  exp.hpp  flatten.hpp  info.hpp  kind.hpp  layer.hpp  linear.hpp  log.hpp  log_sigmoid.hpp  mulc.hpp  relu.hpp  sigmoid.hpp  sqrt.hpp  square.hpp  tanh.hpp
include/layers/: convolution.hpp  exp.hpp  layers.hpp  linear.hpp  log.hpp  log_sigmoid.hpp  mulc.hpp  relu.hpp  sigmoid.hpp  sqrt.hpp  square.hpp  tanh.hpp
include/linalg/: dot.hpp  linalg.hpp  reduce.hpp
include/optimizer/: rmsprop.hpp  sgd.hpp
include/tensor/: base.hpp  detail.hpp  ones.hpp  rand.hpp  randn.hpp  shape.hpp  tensor.hpp  zeros.hpp
include/utils/: alloc.hpp  compat.hpp  error.hpp  mpl.hpp  nocopy.hpp  range.hpp  timer.hpp  utils.hpp
src/: main.cpp
test/: test_main.cpp
test/tensor/: shape_test.cpp  tensor_test.cpp  zeros_test.cpp
